# pwmgr

./: .gitattributes  AGENETS.md  AGENTS.md  Cargo.toml  README.md
doc/: DESIGN.md  REQUIREMENTS.md
src/: main.rs
src/cmd_args/: config.rs  logger.rs  mod.rs
src/command/: add.rs  edit.rs  editor.rs  export.rs  import.rs  list.rs  matcher.rs  mod.rs  prompt.rs  query.rs  remove.rs  search.rs  tags.rs  util.rs
src/command/sync/: client.rs  mod.rs  server.rs
src/command/templates/: add_template.yml
src/database/: mod.rs  types.rs
