[package]
name = "pwmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
redb = "3.1.0"
regex = "1.12.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
strsim = "0.11.1"
toml = "0.9.8"
ulid = { version = "1.2.1", features = ["serde"] }
